fixed some spacing, lambda works

--- a/_sass/_avatax-demo.scss
+++ b/_sass/_avatax-demo.scss
@@ -8,7 +8,7 @@
 
  #demo-api-details {
     padding: none;
-    max-height:900px;
+    max-height:700px;
     overflow: auto;
  }
 
@@ -18,10 +18,16 @@
 
  #demo-shortcuts {
     padding: none;
-    max-height:900px;
+    max-height:700px;
     overflow: auto;
  }
 
  #demo-console-req {
     margin-bottom: 5px;
+ }
+
+ .demo-shortcut-desc {
+    margin-top: 15px !important;
+    font-weight: bold;
+    font-size: 15px;
  }
